--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-extension-starter",
+  "name": "web-rotor",
   "version": "2.0.0",
   "description": "Web extension starter using react and typescript",
   "private": true,
