--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,8 +1,7 @@
 {
-  "manifest_version": 2,
-  "name": "Sample WebExtension",
+  "manifest_version": 3,
+  "name": "Page Sailor",
   "version": "0.0.0",
-
   "icons": {
     "16": "assets/icons/favicon-16.png",
     "32": "assets/icons/favicon-32.png",
@@ -12,31 +11,30 @@
   "description": "Sample description",
   "homepage_url": "https://github.com/abhijithvijayan/web-extension-starter",
   "short_name": "Sample Name",
-
   "permissions": [
     "activeTab",
-    "storage",
+    "storage"
+  ],
+  "host_permissions": [
     "http://*/*",
     "https://*/*"
   ],
-
-  "content_security_policy": "script-src 'self'; object-src 'self'",
-
+  "content_security_policy": {
+    "script-src": "self",
+    "object-src": "self"
+  },
   "__chrome|firefox__author": "abhijithvijayan",
   "__opera__developer": {
     "name": "abhijithvijayan"
   },
-
   "__firefox__applications": {
     "gecko": {
       "id": "{754FB1AD-CC3B-4856-B6A0-7786F8CA9D17}"
     }
   },
-
   "__chrome__minimum_chrome_version": "49",
   "__opera__minimum_opera_version": "36",
-
-  "browser_action": {
+  "action": {
     "default_popup": "popup.html",
     "default_icon": {
       "16": "assets/icons/favicon-16.png",
@@ -44,32 +42,26 @@
       "48": "assets/icons/favicon-48.png",
       "128": "assets/icons/favicon-128.png"
     },
-    "default_title": "tiny title",
-    "__chrome|opera__chrome_style": false,
-    "__firefox__browser_style": false
+    "default_title": "Page Sailor"
   },
-
   "__chrome|opera__options_page": "options.html",
   "options_ui": {
     "page": "options.html",
-    "open_in_tab": true,
-    "__chrome__chrome_style": false
+    "open_in_tab": true
   },
-
   "background": {
-    "scripts": [
-      "js/background.bundle.js"
-    ],
-    "__chrome|opera__persistent": false
+    "service_worker": "js/background.bundle.js",
+    "type": "module"
   },
-
-  "content_scripts": [{
-    "matches": [
-      "http://*/*",
-      "https://*/*"
-    ],
-    "js": [
-      "js/contentScript.bundle.js"
-    ]
-  }]
+  "content_scripts": [
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "js/contentScript.bundle.js"
+      ]
+    }
+  ]
 }
