--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.0",
+    "@types/chrome": "0.0.193",
+    "@types/filesystem": "0.0.32",
+    "@types/har-format": "^1.2.8",
     "advanced-css-reset": "^1.2.2",
     "emoji-log": "^1.0.2",
     "react": "^17.0.2",
