--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
 		/* Additional Checks */
 		"useDefineForClassFields": true,
 		"skipLibCheck": true,
+		"strict": true,
+		"noUncheckedIndexedAccess": true,
 	},
 	"include": [
 		"source",
