good midway point for types corrections

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,16 +19,23 @@
 		"max-classes-per-file": "off",
 		"node/no-missing-import": "off",
 		"node/no-unpublished-import": "off",
-		"node/no-unsupported-features/es-syntax": ["error", {
-			"ignores": ["modules"]
-		}]
+		"node/no-unsupported-features/es-syntax": [
+			"error",
+			{
+				"ignores": [
+					"modules"
+				]
+			}
+		]
 	},
 	"env": {
 		"webextensions": true
 	},
 	"settings": {
 		"node": {
-			"tryExtensions": [".tsx"] // append tsx to the list as well
+			"tryExtensions": [
+				".tsx"
+			] // append tsx to the list as well
 		}
 	}
 }
