--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "resolve-url-loader": "^3.1.3",
     "sass-loader": "^10.2.0",
     "terser-webpack-plugin": "^4.2.3",
-    "typescript": "4.1.5",
+    "typescript": "^4.7.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.7.0",
     "webpack-extension-reloader": "^1.1.4",
