--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/runtime": "^7.14.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.9.0",
     "@types/chrome": "0.0.193",
     "@types/filesystem": "0.0.32",
